# ip-inspector

./: .gitignore  MANIFEST.in  README.md  ip-inspector  pyproject.toml  requirements.txt  setup.py
docs/: how-to.md
docs/how-to/: configure.md  update-maxmind-databases.md
ip_inspector/: __init__.py  blah.ipynb  cli.py  config.py  database.py  inspector.py  maxmind.py  tor.py
ip_inspector/etc/: default.config.yaml
tests/: __init__.py  test_cli.py  test_config.py  test_ip_inspector.py  test_maxmind.py  test_the_database.py
