[tool.poetry]
name = "ip_inspector"
version = "0.1.0"
description = ""
authors = ["Sean McFeely <mcfeelynaes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
geoip2 = "^4.2.0"
argcomplete = "^1.12.3"
PyYAML = "^5.4.1"
coloredlogs = "^15.0.1"
SQLAlchemy = "^1.4.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
ip-inspector = "ip_inspector.cli:main"
