[tool.poetry]
name = "ip_inspector"
version = "0.1.17"
license = "Apache-2.0"
homepage = "https://github.com/seanmcfeely/ip-inspector"
description = "IP inspector is an IPv4 and IPv6 address metadata enricher and tracking tool. Use it on the command line and leverage it as a library."
authors = ["Sean McFeely <mcfeelynaes@gmail.com>"]
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
argcomplete = ">=1.12"
coloredlogs = ">=15.0"
SQLAlchemy = ">=1.3.0,<2.0"
requests = "^2.25"
geoip2 = "^4.2.0"
PyYAML = "^5.1"
SQLAlchemy-Utils = "^0.38.3"
pg8000 = "^1.29.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"
black = "^21.6b0"
setuptools = "^57.0.0"
flake8 = "^4.0.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
ip-inspector = "ip_inspector.cli:main"

